--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #spring.jpa.show-sql=true
 #useSSL=false
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=$(JDBC_DATABASE_URL)
 spring.datasource.username=$(JDBC_DATABASE_USERNAME)
 spring.datasource.password=$(JDBC_DATABASE_PASSWORD)
