--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-### MySQL dependency
+## MySQL dependency
 #spring.jpa.hibernate.ddl-auto=create
 #spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
 #spring.h2.console.enabled=true
