updated final version2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
 spring.h2.console.enabled=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=seme@mysql
 spring.jpa.show-sql=true
 useSSL=false
+
+#spring.resources.static-locations=file:///C:/{/Users/smewl/Documents}/{NewFinalProject_Scorpio}/src/main/resources/static
