--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 ## MySQL dependency
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
-#spring.h2.console.enabled=true
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.show-sql=true
-#useSSL=false
-
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=$(JDBC_DATABASE_URL)
-spring.datasource.username=$(JDBC_DATABASE_USERNAME)
-spring.datasource.password=$(JDBC_DATABASE_PASSWORD)
+spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
+spring.h2.console.enabled=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+useSSL=false
 
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=$(JDBC_DATABASE_URL)
+#spring.datasource.username=$(JDBC_DATABASE_USERNAME)
+#spring.datasource.password=$(JDBC_DATABASE_PASSWORD)
+#
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
